--- a/font/modernpics.css
+++ b/font/modernpics.css
@@ -28,105 +28,94 @@
   height: 24px;
 }
 
-.icon-glyph1:before { content: "+"; } /* '\2b' */
-.icon-glyph2:before { content: "F"; } /* '\46' */
-.icon-glyph3:before { content: "W"; } /* '\57' */
-.icon-glyph4:before { content: "E"; } /* '\45' */
-.icon-glyph5:before { content: "P"; } /* '\50' */
-.icon-glyph6:before { content: "S"; } /* '\53' */
-.icon-glyph7:before { content: "f"; } /* '\66' */
-.icon-glyph8:before { content: "k"; } /* '\6b' */
-.icon-glyph9:before { content: "<"; } /* '\3e' */
-.icon-glyph10:before { content: "p"; } /* '\70' */
-.icon-glyph11:before { content: ">"; } /* '\3c' */
-.icon-glyph12:before { content: "$"; } /* '\24' */
-.icon-glyph13:before { content: "t"; } /* '\74' */
-.icon-glyph14:before { content: "e"; } /* '\65' */
-.icon-glyph15:before { content: "|"; } /* '\7c' */
-.icon-glyph16:before { content: "s"; } /* '\73' */
-.icon-glyph17:before { content: "R"; } /* '\52' */
-.icon-glyph18:before { content: "u"; } /* '\75' */
-.icon-glyph19:before { content: "v"; } /* '\76' */
-.icon-glyph20:before { content: "_"; } /* '\5f' */
-.icon-glyph21:before { content: "c"; } /* '\63' */
-.icon-glyph22:before { content: "w"; } /* '\77' */
-.icon-glyph23:before { content: "g"; } /* '\67' */
-.icon-glyph24:before { content: "K"; } /* '\4b' */
-.icon-glyph25:before { content: "m"; } /* '\6d' */
-.icon-glyph26:before { content: "X"; } /* '\58' */
-.icon-glyph27:before { content: "x"; } /* '\78' */
-.icon-glyph28:before { content: "h"; } /* '\68' */
-.icon-glyph29:before { content: "T"; } /* '\54' */
-.icon-glyph30:before { content: "i"; } /* '\69' */
-.icon-glyph31:before { content: "j"; } /* '\6a' */
-.icon-glyph32:before { content: "l"; } /* '\6c' */
-.icon-glyph33:before { content: "✎"; } /* '\270e' */
-.icon-glyph34:before { content: "!"; } /* '\21' */
-.icon-glyph35:before { content: "^"; } /* '\5e' */
-.icon-glyph36:before { content: "⧉"; } /* '\29c9' */
-.icon-glyph37:before { content: "n"; } /* '\6e' */
-.icon-glyph38:before { content: "d"; } /* '\64' */
-.icon-glyph39:before { content: "M"; } /* '\4d' */
-.icon-glyph40:before { content: "N"; } /* '\4e' */
-.icon-glyph41:before { content: "D"; } /* '\44' */
-.icon-glyph42:before { content: "b"; } /* '\62' */
-.icon-glyph43:before { content: "G"; } /* '\47' */
-.icon-glyph44:before { content: "o"; } /* '\6f' */
-.icon-glyph45:before { content: "?"; } /* '\3f' */
-.icon-glyph46:before { content: "q"; } /* '\71' */
-.icon-glyph47:before { content: "{"; } /* '\7b' */
-.icon-glyph48:before { content: "["; } /* '\5b' */
-.icon-glyph49:before { content: "\\"; } /* '\5c' */
-.icon-glyph50:before { content: "]"; } /* '\5d' */
-.icon-glyph51:before { content: "I"; } /* '\49' */
-.icon-glyph52:before { content: "A"; } /* '\41' */
-.icon-glyph53:before { content: "r"; } /* '\72' */
-.icon-glyph54:before { content: "B"; } /* '\42' */
-.icon-glyph55:before { content: "Z"; } /* '\5a' */
-.icon-glyph56:before { content: "C"; } /* '\43' */
-.icon-glyph57:before { content: "U"; } /* '\55' */
-.icon-glyph58:before { content: "a"; } /* '\61' */
-.icon-glyph59:before { content: "H"; } /* '\48' */
-.icon-glyph60:before { content: "J"; } /* '\4a' */
-.icon-glyph61:before { content: "y"; } /* '\79' */
-.icon-glyph62:before { content: "z"; } /* '\7a' */
-.icon-glyph63:before { content: "‘"; } /* '\2018' */
-.icon-glyph64:before { content: "L"; } /* '\4c' */
-.icon-glyph65:before { content: "O"; } /* '\4f' */
-.icon-glyph66:before { content: "="; } /* '\3d' */
-.icon-glyph67:before { content: ","; } /* '\2c' */
-.icon-glyph68:before { content: "V"; } /* '\56' */
-.icon-glyph69:before { content: "ˆ"; } /* '\2c6' */
-.icon-glyph70:before { content: "2"; } /* '\32' */
-.icon-glyph71:before { content: "1"; } /* '\31' */
-.icon-glyph72:before { content: "0"; } /* '\30' */
-.icon-glyph73:before { content: "Q"; } /* '\51' */
-.icon-glyph74:before { content: "3"; } /* '\33' */
-.icon-glyph75:before { content: "4"; } /* '\34' */
-.icon-glyph76:before { content: "`"; } /* '\60' */
-.icon-glyph77:before { content: "}"; } /* '\7d' */
-.icon-glyph78:before { content: "-"; } /* '\2d' */
-.icon-glyph79:before { content: "Y"; } /* '\59' */
-.icon-glyph80:before { content: "#"; } /* '\23' */
-.icon-glyph81:before { content: "5"; } /* '\35' */
-.icon-glyph82:before { content: "6"; } /* '\36' */
-.icon-glyph83:before { content: " "; } /* '\20' */
-.icon-glyph84:before { content: "@"; } /* '\40' */
-.icon-glyph85:before { content: "ì"; } /* '\ec' */
-.icon-glyph86:before { content: "\22"; } /* '\22' */
-.icon-glyph87:before { content: "%"; } /* '\25' */
-.icon-glyph88:before { content: "."; } /* '\2e' */
-.icon-glyph89:before { content: "/"; } /* '\2f' */
-.icon-glyph90:before { content: "*"; } /* '\2a' */
-.icon-glyph91:before { content: "7"; } /* '\37' */
-.icon-glyph92:before { content: "\26"; } /* '\26' */
-.icon-glyph93:before { content: "8"; } /* '\38' */
-.icon-glyph94:before { content: "9"; } /* '\39' */
-.icon-glyph95:before { content: ":"; } /* '\3a' */
-.icon-glyph96:before { content: ";"; } /* '\3b' */
-.icon-glyph97:before { content: "Ä"; } /* '\c4' */
-.icon-glyph98:before { content: "\27"; } /* '\27' */
-.icon-glyph99:before { content: "("; } /* '\28' */
-.icon-glyph100:before { content: ")"; } /* '\29' */
-.icon-glyph101:before { content: "×"; } /* '\d7' */
+.icon-search:before { content: "\1f50d"; } /* '🔍' */
+.icon-mail:before { content: "\2709"; } /* '✉' */
+.icon-heart:before { content: "\2665"; } /* '♥' */
+.icon-star:before { content: "\2605"; } /* '★' */
+.icon-user:before { content: "\1f464"; } /* '👤' */
+.icon-user-woman:before { content: "\1f469"; } /* '👩' */
+.icon-user-pair:before { content: "\1f46b"; } /* '👫' */
+.icon-video:before { content: "\1f3ac"; } /* '🎬' */
+.icon-video-alt:before { content: "\1f3a6"; } /* '🎦' */
+.icon-videocam:before { content: "\1f3a5"; } /* '🎥' */
+.icon-videocam-alt:before { content: "\1f3f9"; } /* '🏹' */
+.icon-camera:before { content: "\1f4f7"; } /* '📷' */
+.icon-th:before { content: "\268f"; } /* '⚏' */
+.icon-th-list:before { content: "\2630"; } /* '☰' */
+.icon-ok:before { content: "\2713"; } /* '✓' */
+.icon-cancel:before { content: "\2715"; } /* '✕' */
+.icon-cancel-circle:before { content: "\2716"; } /* '✖' */
+.icon-plus:before { content: "\2b"; } /* '+' */
+.icon-help-circle:before { content: "\e704"; } /* '' */
+.icon-info-circle:before { content: "\e705"; } /* '' */
+.icon-home:before { content: "\2302"; } /* '⌂' */
+.icon-lock:before { content: "\1f512"; } /* '🔒' */
+.icon-lock-open:before { content: "\1f513"; } /* '🔓' */
+.icon-eye:before { content: "\e70a"; } /* '' */
+.icon-tag:before { content: "\e70c"; } /* '' */
+.icon-thumbs-up:before { content: "\1f44d"; } /* '👍' */
+.icon-thumbs-down:before { content: "\1f44e"; } /* '👎' */
+.icon-download:before { content: "\1f4e5"; } /* '📥' */
+.icon-export:before { content: "\e715"; } /* '' */
+.icon-pencil:before { content: "\270e"; } /* '✎' */
+.icon-pencil-alt:before { content: "\2710"; } /* '✐' */
+.icon-edit:before { content: "\270d"; } /* '✍' */
+.icon-chat:before { content: "\e720"; } /* '' */
+.icon-print:before { content: "\e716"; } /* '' */
+.icon-bell:before { content: "\1f514"; } /* '🔔' */
+.icon-attention:before { content: "\26a0"; } /* '⚠' */
+.icon-location:before { content: "\e724"; } /* '' */
+.icon-trash:before { content: "\e729"; } /* '' */
+.icon-doc:before { content: "\1f4c4"; } /* '📄' */
+.icon-article:before { content: "\e734"; } /* '' */
+.icon-article-alt:before { content: "\e735"; } /* '' */
+.icon-rss:before { content: "\e73a"; } /* '' */
+.icon-wrench:before { content: "\1f527"; } /* '🔧' */
+.icon-basket:before { content: "\e73d"; } /* '' */
+.icon-basket-alt:before { content: "\e7ae"; } /* '' */
+.icon-calendar:before { content: "\1f4c5"; } /* '📅' */
+.icon-calendar-alt:before { content: "\e73e"; } /* '' */
+.icon-volume-off:before { content: "\1f507"; } /* '🔇' */
+.icon-volume-down:before { content: "\1f509"; } /* '🔉' */
+.icon-volume-up:before { content: "\1f50a"; } /* '🔊' */
+.icon-bullhorn:before { content: "\1f4e3"; } /* '📣' */
+.icon-clock:before { content: "\1f554"; } /* '🕔' */
+.icon-clock-alt:before { content: "\1f553"; } /* '🕓' */
+.icon-stop:before { content: "\e7b3"; } /* '' */
+.icon-resize-full:before { content: "\e744"; } /* '' */
+.icon-resize-small:before { content: "\e746"; } /* '' */
+.icon-zoom-in:before { content: "\e750"; } /* '' */
+.icon-zoom-out:before { content: "\e751"; } /* '' */
+.icon-popup:before { content: "\e74c"; } /* '' */
+.icon-down-dir:before { content: "\25be"; } /* '▾' */
+.icon-left-dir:before { content: "\25c2"; } /* '◂' */
+.icon-right-dir:before { content: "\25b8"; } /* '▸' */
+.icon-glyph78:before { content: "\25b4"; } /* '▴' */
+.icon-down:before { content: "\2193"; } /* '↓' */
+.icon-up:before { content: "\2191"; } /* '↑' */
+.icon-cw:before { content: "\27f3"; } /* '⟳' */
+.icon-signal:before { content: "\e770"; } /* '' */
+.icon-award:before { content: "\1f3c9"; } /* '🏉' */
+.icon-mobile:before { content: "\1f4f1"; } /* '📱' */
+.icon-mobile-alt:before { content: "\e7b0"; } /* '' */
+.icon-tablet:before { content: "\e7b1"; } /* '' */
+.icon-ipod:before { content: "\e7b2"; } /* '' */
+.icon-cd:before { content: "\1f4bf"; } /* '💿' */
+.icon-grid:before { content: "\e7b4"; } /* '' */
+.icon-book:before { content: "\1f4d5"; } /* '📕' */
+.icon-easel:before { content: "\e7b5"; } /* '' */
+.icon-globe:before { content: "\1f310"; } /* '🌐' */
+.icon-chart:before { content: "\1f4c8"; } /* '📈' */
+.icon-chart-bar:before { content: "\1f4ca"; } /* '📊' */
+.icon-chart-pie:before { content: "\e7a2"; } /* '' */
+.icon-money:before { content: "\1f4b0"; } /* '💰' */
+.icon-dollar:before { content: "\1f4b5"; } /* '💵' */
+.icon-at:before { content: "\40"; } /* '@' */
+.icon-colon:before { content: "\3a"; } /* ':' */
+.icon-semicolon:before { content: "\3b"; } /* ';' */
+.icon-facebook:before { content: "\f300"; } /* '' */
+.icon-facebook-rect:before { content: "\f301"; } /* '' */
+.icon-twitter:before { content: "\f302"; } /* '' */
+.icon-twitter-bird:before { content: "\f303"; } /* '' */
+.icon-twitter-rect:before { content: "\f314"; } /* '' */
 
