reworked generation & updated baseline

--- a/font/modernpics.css
+++ b/font/modernpics.css
@@ -29,93 +29,89 @@
 }
 
 .icon-search:before { content: "\1f50d"; } /* '🔍' */
-.icon-mail:before { content: "\2709"; } /* '✉' */
-.icon-heart:before { content: "\2665"; } /* '♥' */
-.icon-star:before { content: "\2605"; } /* '★' */
+.icon-mail:before { content: "\2709"; } /* '\2709' */
+.icon-heart:before { content: "\2665"; } /* '\2665' */
+.icon-star:before { content: "\2605"; } /* '\2605' */
 .icon-user:before { content: "\1f464"; } /* '👤' */
 .icon-user-woman:before { content: "\1f469"; } /* '👩' */
 .icon-user-pair:before { content: "\1f46b"; } /* '👫' */
-.icon-video:before { content: "\1f3ac"; } /* '🎬' */
 .icon-video-alt:before { content: "\1f3a6"; } /* '🎦' */
 .icon-videocam:before { content: "\1f3a5"; } /* '🎥' */
 .icon-videocam-alt:before { content: "\1f3f9"; } /* '🏹' */
 .icon-camera:before { content: "\1f4f7"; } /* '📷' */
-.icon-th:before { content: "\268f"; } /* '⚏' */
-.icon-th-list:before { content: "\2630"; } /* '☰' */
-.icon-ok:before { content: "\2713"; } /* '✓' */
-.icon-cancel:before { content: "\2715"; } /* '✕' */
-.icon-cancel-circle:before { content: "\2716"; } /* '✖' */
-.icon-plus:before { content: "\2b"; } /* '+' */
-.icon-help-circle:before { content: "\e704"; } /* '' */
-.icon-info-circle:before { content: "\e705"; } /* '' */
-.icon-home:before { content: "\2302"; } /* '⌂' */
+.icon-th:before { content: "\268f"; } /* '\268f' */
+.icon-th-list:before { content: "\2630"; } /* '\2630' */
+.icon-ok:before { content: "\2713"; } /* '\2713' */
+.icon-cancel:before { content: "\2715"; } /* '\2715' */
+.icon-cancel-circle:before { content: "\2716"; } /* '\2716' */
+.icon-plus:before { content: "\2b"; } /* '\2b' */
+.icon-home:before { content: "\2302"; } /* '\2302' */
 .icon-lock:before { content: "\1f512"; } /* '🔒' */
 .icon-lock-open:before { content: "\1f513"; } /* '🔓' */
-.icon-eye:before { content: "\e70a"; } /* '' */
-.icon-tag:before { content: "\e70c"; } /* '' */
+.icon-eye:before { content: "\e70a"; } /* '\e70a' */
+.icon-tag:before { content: "\e70c"; } /* '\e70c' */
 .icon-thumbs-up:before { content: "\1f44d"; } /* '👍' */
 .icon-thumbs-down:before { content: "\1f44e"; } /* '👎' */
 .icon-download:before { content: "\1f4e5"; } /* '📥' */
-.icon-export:before { content: "\e715"; } /* '' */
-.icon-pencil:before { content: "\270e"; } /* '✎' */
-.icon-pencil-alt:before { content: "\2710"; } /* '✐' */
-.icon-edit:before { content: "\270d"; } /* '✍' */
-.icon-chat:before { content: "\e720"; } /* '' */
-.icon-print:before { content: "\e716"; } /* '' */
+.icon-export:before { content: "\e715"; } /* '\e715' */
+.icon-pencil:before { content: "\270e"; } /* '\270e' */
+.icon-pencil-alt:before { content: "\2710"; } /* '\2710' */
+.icon-edit:before { content: "\270d"; } /* '\270d' */
+.icon-chat:before { content: "\e720"; } /* '\e720' */
+.icon-print:before { content: "\e716"; } /* '\e716' */
 .icon-bell:before { content: "\1f514"; } /* '🔔' */
-.icon-attention:before { content: "\26a0"; } /* '⚠' */
-.icon-location:before { content: "\e724"; } /* '' */
-.icon-trash:before { content: "\e729"; } /* '' */
+.icon-attention:before { content: "\26a0"; } /* '\26a0' */
+.icon-location:before { content: "\e724"; } /* '\e724' */
+.icon-trash:before { content: "\e729"; } /* '\e729' */
 .icon-doc:before { content: "\1f4c4"; } /* '📄' */
-.icon-article:before { content: "\e734"; } /* '' */
-.icon-article-alt:before { content: "\e735"; } /* '' */
-.icon-rss:before { content: "\e73a"; } /* '' */
+.icon-article:before { content: "\e734"; } /* '\e734' */
+.icon-article-alt:before { content: "\e735"; } /* '\e735' */
+.icon-rss:before { content: "\e73a"; } /* '\e73a' */
 .icon-wrench:before { content: "\1f527"; } /* '🔧' */
-.icon-basket:before { content: "\e73d"; } /* '' */
-.icon-basket-alt:before { content: "\e7ae"; } /* '' */
+.icon-basket:before { content: "\e73d"; } /* '\e73d' */
+.icon-basket-alt:before { content: "\e7ae"; } /* '\e7ae' */
 .icon-calendar:before { content: "\1f4c5"; } /* '📅' */
-.icon-calendar-alt:before { content: "\e73e"; } /* '' */
+.icon-calendar-alt:before { content: "\e73e"; } /* '\e73e' */
 .icon-volume-off:before { content: "\1f507"; } /* '🔇' */
 .icon-volume-down:before { content: "\1f509"; } /* '🔉' */
 .icon-volume-up:before { content: "\1f50a"; } /* '🔊' */
 .icon-bullhorn:before { content: "\1f4e3"; } /* '📣' */
 .icon-clock:before { content: "\1f554"; } /* '🕔' */
 .icon-clock-alt:before { content: "\1f553"; } /* '🕓' */
-.icon-stop:before { content: "\e7b3"; } /* '' */
-.icon-resize-full:before { content: "\e744"; } /* '' */
-.icon-resize-small:before { content: "\e746"; } /* '' */
-.icon-zoom-in:before { content: "\e750"; } /* '' */
-.icon-zoom-out:before { content: "\e751"; } /* '' */
-.icon-popup:before { content: "\e74c"; } /* '' */
-.icon-down-dir:before { content: "\25be"; } /* '▾' */
-.icon-left-dir:before { content: "\25c2"; } /* '◂' */
-.icon-right-dir:before { content: "\25b8"; } /* '▸' */
-.icon-glyph78:before { content: "\25b4"; } /* '▴' */
-.icon-down:before { content: "\2193"; } /* '↓' */
-.icon-up:before { content: "\2191"; } /* '↑' */
-.icon-cw:before { content: "\27f3"; } /* '⟳' */
-.icon-signal:before { content: "\e770"; } /* '' */
+.icon-stop:before { content: "\e7b3"; } /* '\e7b3' */
+.icon-resize-full:before { content: "\e744"; } /* '\e744' */
+.icon-resize-small:before { content: "\e746"; } /* '\e746' */
+.icon-zoom-in:before { content: "\e750"; } /* '\e750' */
+.icon-zoom-out:before { content: "\e751"; } /* '\e751' */
+.icon-popup:before { content: "\e74c"; } /* '\e74c' */
+.icon-down-dir:before { content: "\25be"; } /* '\25be' */
+.icon-left-dir:before { content: "\25c2"; } /* '\25c2' */
+.icon-right-dir:before { content: "\25b8"; } /* '\25b8' */
+.icon-glyph78:before { content: "\25b4"; } /* '\25b4' */
+.icon-down:before { content: "\2193"; } /* '\2193' */
+.icon-up:before { content: "\2191"; } /* '\2191' */
+.icon-cw:before { content: "\27f3"; } /* '\27f3' */
+.icon-signal:before { content: "\e770"; } /* '\e770' */
 .icon-award:before { content: "\1f3c9"; } /* '🏉' */
 .icon-mobile:before { content: "\1f4f1"; } /* '📱' */
-.icon-mobile-alt:before { content: "\e7b0"; } /* '' */
-.icon-tablet:before { content: "\e7b1"; } /* '' */
-.icon-ipod:before { content: "\e7b2"; } /* '' */
+.icon-mobile-alt:before { content: "\e7b0"; } /* '\e7b0' */
+.icon-tablet:before { content: "\e7b1"; } /* '\e7b1' */
+.icon-ipod:before { content: "\e7b2"; } /* '\e7b2' */
 .icon-cd:before { content: "\1f4bf"; } /* '💿' */
-.icon-grid:before { content: "\e7b4"; } /* '' */
+.icon-grid:before { content: "\e7b4"; } /* '\e7b4' */
 .icon-book:before { content: "\1f4d5"; } /* '📕' */
-.icon-easel:before { content: "\e7b5"; } /* '' */
+.icon-easel:before { content: "\e7b5"; } /* '\e7b5' */
 .icon-globe:before { content: "\1f310"; } /* '🌐' */
 .icon-chart:before { content: "\1f4c8"; } /* '📈' */
 .icon-chart-bar:before { content: "\1f4ca"; } /* '📊' */
-.icon-chart-pie:before { content: "\e7a2"; } /* '' */
-.icon-money:before { content: "\1f4b0"; } /* '💰' */
+.icon-chart-pie:before { content: "\e7a2"; } /* '\e7a2' */
 .icon-dollar:before { content: "\1f4b5"; } /* '💵' */
-.icon-at:before { content: "\40"; } /* '@' */
-.icon-colon:before { content: "\3a"; } /* ':' */
-.icon-semicolon:before { content: "\3b"; } /* ';' */
-.icon-facebook:before { content: "\f300"; } /* '' */
-.icon-facebook-rect:before { content: "\f301"; } /* '' */
-.icon-twitter:before { content: "\f302"; } /* '' */
-.icon-twitter-bird:before { content: "\f303"; } /* '' */
-.icon-twitter-rect:before { content: "\f314"; } /* '' */
+.icon-at:before { content: "\40"; } /* '\40' */
+.icon-colon:before { content: "\3a"; } /* '\3a' */
+.icon-semicolon:before { content: "\3b"; } /* '\3b' */
+.icon-facebook:before { content: "\f300"; } /* '\f300' */
+.icon-facebook-rect:before { content: "\f301"; } /* '\f301' */
+.icon-twitter:before { content: "\f302"; } /* '\f302' */
+.icon-twitter-bird:before { content: "\f303"; } /* '\f303' */
+.icon-twitter-rect:before { content: "\f314"; } /* '\f314' */
 
